--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
   <link rel="stylesheet" href="./mobileView.css" />
   <link rel="stylesheet" href="./style_PetCards.css" />
   <link rel="icon" type="image/x-icon" href="logo.png" />
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+
 
 
   <script defer src="https://unpkg.com/alpinejs@3.2.4/dist/cdn.min.js"></script>
@@ -51,19 +53,9 @@
         id="nav-button"
       >
         <span class="sr-only">Open main menu</span>
-        <svg
-          class="w-6 h-6"
-          aria-hidden="true"
-          fill="currentColor"
-          viewBox="0 0 20 20"
-          xmlns="http://www.w3.org/2000/svg"
-        >
-          <path
-            fill-rule="evenodd"
-            d="M3 5a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1zM3 10a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1zM3 15a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1z"
-            clip-rule="evenodd"
-          ></path>
-        </svg>
+        <span class="material-symbols-outlined">
+          menu
+          </span>
       </button>
       <nav class="">
         <div class="hidden w-full lg:block z-2" id="navbar">
