--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
       </p>
       <a href="./volunteer.html" class="block mx-auto w-fit ">
         <button
-          class="inline-flex items-center hover:bg-amber-800 border-0 py-2 lg:py-2 px-2 focus:outline-none text-white font-bold rounded text-base mt-4 md:mt-0 hover:translate-x-2 transition-transform bg-transparent ">
+          class="inline-flex items-center hover:bg-amber-800 border-0 py-2 lg:py-2 px-2 focus:outline-none text-white font-bold rounded text-base mt-4 md:mt-0  transition-transform bg-transparent ">
           Become Volunteer
           <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
             class="w-4 h-4 ml-1 transform translate-x-0 transition-transform" viewBox="0 0 24 24">
