change font-size and color of about

--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
       <p id="About"></p>
       <h2
         class="mb-8 text-7xl tracking-tight underline-offset-4 turn-yellow-hover antialiased font-extrabold text-center text-gray-900 dark:text-white text_3"
-        style="padding-top: 120px; padding-bottom: 25px">
+        style="padding-top: 10px; padding-bottom: 20px ;font-size: 45px; ">
         About Us
       </h2>
       <p class="mb-8 lg:mb-16 font-light text-center text-gray-900 dark:text-white text_3 sm:text-2xl text_6">
@@ -214,17 +214,17 @@
         pets in need of a forever home, while also providing emergency medical
         care for stray animals in distress. We strive to make a difference in
         the lives of these innocent creatures by offering options to
-        <a class="hover-underline-animation" href="#meet"><b>Adopt</b></a>,
-        <a class="hover-underline-animation" href="./donate.html"><b>Donate</b></a>
+        <a class="hover-underline-animation" href="#meet"><b style="font-family: 'Times New Roman';color: red;">Adopt</b></a>,
+        <a class="hover-underline-animation" href="./donate.html"><b style="font-family: 'Times New Roman';color: red;">Donate</b></a>
         and through our SOS feature
-        <a class="hover-underline-animation" href="./reportstary.html"><b>Report</b></a>
+        <a class="hover-underline-animation" href="./reportstary.html"><b style="font-family: 'Times New Roman';color: red;">Report</b></a>
         stray animals in need of immediate assistance. Together, we can create
         a better world for all animals.
       </p>
       <a href="./volunteer.html" class="block mx-auto w-fit ">
         <button
           class="inline-flex items-center hover:bg-amber-800 border-0 py-2 lg:py-2 px-2 focus:outline-none text-white font-bold rounded text-base mt-4 md:mt-0 hover:translate-x-2 transition-transform bg-transparent ">
-          Become Volunteer
+          <h1 style="font-size: 30px;">Become Volunteer</h1>
           <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
             class="w-4 h-4 ml-1 transform translate-x-0 transition-transform" viewBox="0 0 24 24">
             <path d="M5 12h14M12 5l7 7-7 7"></path>
