--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
       </button>
       <nav class="">
         <div class="hidden w-full lg:block z-2" id="navbar">
-          <ul class="w-[100vw] h-1/2 top-0 right-0 p-4 lg:p-4 mt-12 lg:mt-0 text-center text-base md:text-md space-y-4 lg:space-y-0 lg:space-x-5 lg:static lg:w-auto flex flex-col rounded-lg items-center lg:items-center lg:bg-transparent lg:border-0 lg:flex-row justify-between">
+          <ul class="w-[100vw] h-1/2 top-0 right-0 p- lg:p-4 mt-12 lg:mt-0 text-center text-base sm:text-sm space-y-4 lg:space-y-0 lg:space-x-5 lg:static lg:w-auto flex flex-col rounded-lg items-center lg:items-center lg:bg-transparent lg:border-0 lg:flex-row justify-between">
            <div class="nav-item">
             <li>
               <a
@@ -391,7 +391,7 @@
                             <span>Cat</span>
                         </li>
                         <li class="flex text-xl justify-self-center">
-                            <span>2.5 years</                        </li>
+                            <span>2.5 years</span>                        </li>
                         <li class="flex text-xl justify-self-center">
                             <span>Female</span>
                         </li>
