--- a/donate.html
+++ b/donate.html
@@ -13,7 +13,7 @@
   <link rel="stylesheet" href="./style.css">
   <link rel="stylesheet" href="./introSection.css">
   <link rel="stylesheet" href="./navbar.css">
-  <link rel="stylesheet" href="./mobileView.css">
+  <link rel="stylesheet" href="./mobilaeView.css">
   <link rel="icon" type="image/x-icon" href="/Assets/Images/logo.ico">
   <script defer src="https://unpkg.com/alpinejs@3.2.4/dist/cdn.min.js"></script>
   <link href="https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css" rel="stylesheet">
@@ -103,6 +103,21 @@
       background-color: #080300;
 
     }
+    @media (max-width:700px){
+    .mobile_responsive{
+    background-color: rgb(59, 124, 220);
+    display: flex;
+    flex-direction: column;
+    }
+    .mobile_responsive div{
+    width:100%;
+    background-color: rgb(59, 124, 220);
+    display: flex;
+    flex-direction: column;
+    
+  }
+
+}
   </style>
 </head>
 
@@ -191,10 +206,10 @@
           Fill up the form below and donate your pets.
         </p>
       </div>
-      <form id="survey-form" action="https://formspree.io/f/xayaokzl" method="POST" name="survey-form"
+      <form id="survey-form" action="https://formspree.io/f/xayaokzl" method="POST" name="survey-form" class="survey-form"
         onsubmit="return validateForm()">
         <div class="lg:w-1/2 md:w-2/3 mx-auto">
-          <div class="flex flex-wrap -m-2">
+          <div class="flex flex-wrap -m-2 mobile_responsive">
             <div class="p-2 w-1/2">
               <div class="relative">
                 <label for="name" class="leading-7 text-sm text-gray-900">Full Name</label>
