adjust the about section

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
     <nav class="">
       <div class="hidden w-full lg:block z-2" id="navbar">
         <ul
-          class="w-[100vw] h-1/2 top-0 right-0 p-4 lg:p-4 mt-12 lg:mt-0 text-center text-base md:text-md space-y-1.5 lg:space-y-0 lg:space-x-3 lg:static lg:w-auto flex flex-col rounded-lg items-center lg:items-center lg:bg-transparent lg:border-0 lg:flex-row justify-between">
+          class="w-[100vw] h-1/2 top-0 right-0 p-4 lg:p-4 mt-12 lg:mt-0 text-center text-base md:text-md space-y-3 lg:space-y-0 lg:space-x-3 lg:static lg:w-auto flex flex-col rounded-lg items-center lg:items-center lg:bg-transparent lg:border-0 lg:flex-row justify-between">
           <div class="nav-item">
             <li>
               <a href="#meet"
@@ -174,11 +174,11 @@
     <div class="py-8 lg:py-16 px-4 mx-auto max-w-screen-md">
       <p id="About"></p>
       <h2
-        class="mb-8 text-7xl tracking-tight underline-offset-4 turn-yellow-hover antialiased font-extrabold text-center text-gray-900 dark:text-white text_3"
-        style="padding-top: 120px; padding-bottom: 25px">
+        class="mb-8 text-7xl tracking-tight underline-offset-4 hover:text-amber-800 antialiased font-extrabold text-center text-gray-900 dark:text-white text_3 cursor-pointer"
+        style="padding-top: 20px; padding-bottom: 25px">
         About Us
       </h2>
-      <p class="mb-8 lg:mb-16 font-light text-center text-gray-900 dark:text-white text_3 sm:text-2xl text_6">
+      <p class="mb-8 lg:mb-10 font-light text-center text-gray-900 dark:text-white text_3 sm:text-2xl text_6">
         Our mission is to provide a platform that connects animal lovers with
         pets in need of a forever home, while also providing emergency medical
         care for stray animals in distress. We strive to make a difference in
@@ -192,7 +192,7 @@
       </p>
       <a href="./volunteer.html" class="block mx-auto w-fit ">
         <button
-          class="inline-flex items-center hover:bg-amber-800 border-0 py-2 lg:py-2 px-2 focus:outline-none text-white font-bold rounded text-base mt-4 md:mt-0 hover:translate-x-2 transition-transform bg-transparent ">
+          class="inline-flex items-center hover:bg-amber-800 border-0 py-2 lg:py-0 px-2 focus:outline-none text-gray-600 hover:text-white font-bold rounded text-base mt-4 md:mt-0 hover:translate-x-2 transition-transform bg-transparent ">
           Become Volunteer
           <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
             class="w-4 h-4 ml-1 transform translate-x-0 transition-transform" viewBox="0 0 24 24">
